# termitype

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  notes.txt  shell.nix
.github/workflows/: ci.yml  release.yml
assets/ascii/: Android.txt  Arch Linux Small.txt  Debian Linux.txt  Fedora Linux.txt  Gentoo.txt  Kali Linux.txt  Linux.txt  Mint.txt  Nier Automata 2B (Alt).txt  Nier Automata 2B.txt  NixOS.txt  Omarchy.txt  OpenBSD.txt  Pay Respects.txt  Pepe Hackerman.txt  Star Trek.txt  Termitype.txt  Void.txt  Windows7.txt
assets/languages/: _list.json  c++.json  chinese.json  code_c++.json  code_haskell.json  code_lua.json  code_python.json  code_rust.json  code_typescript.json  english.json  english_5k.json  git.json  haskell.json  latin.json  python.json  rust.json  spanish.json  typescript.json
assets/themes/: Monketype Theme  Monkeytype  Serika Dark  Termitype Dark  termitype-dark  termitype-light
benches/: lib.rs  theme_benchmarks.rs
docs/: CI_CD_SETUP.md  design.txt
scripts/: install-themes.sh  install.sh  update-themes.sh
src/: actions.rs  app.rs  ascii.rs  assets.rs  builder.rs  cli.rs  config.rs  constants.rs  cqonfig.rs  db.rs  db_writer.rs  debug.rs  debug_panel.rs  error.rs  generator.rs  handler.rs  helpers.rs  input.rs  leaderboard.rs  lib.rs  log.rs  logger.rs  macros.rs  main.rs  menu.rs  menu_builder.rs  modal.rs  notifications.rs  perf.rs  persistence.rs  renderer.rs  styles.rs  termi.rs  theme.rs  tracker.rs  ui.rs  utils.rs  variants.rs  version.rs
src/builders/: keymap_builder.rs  keymap_bulider.rs  keymaps.rs  lexicon_builder.rs  menu_builder.rs  mod.rs
src/common/: filesystem.rs  mod.rs  strings.rs
src/frontend/: renderer.rs
src/tui/: elements.rs  helpers.rs  layout.rs  mod.rs  pickers.rs  renderer.rs  results.rs  utils.rs
src/tui/components/: command_bar.rs  footer.rs  leaderboard.rs  mod.rs  modal_dialog.rs  mode_bar.rs  notifications.rs  pickers.rs  results.rs  size_warning.rs  title.rs  typing_area.rs  typing_cache.rs
src/tui/components/pickers/: command_palette.rs  mod.rs  search_bar.rs  telescope.rs  visualizer.rs
src/tui/components/results/: bottom_bar.rs  graph.rs  minimal.rs  mod.rs  neofetch.rs
src/ui/: actions.rs  components.rs  constants.rs  elements.rs  layout.rs  mod.rs  render.rs  renderer.rs  ui.rs  utils.rs
src/ui/components/: action_bar.rs  command_bar.rs  elements.rs  footer.rs  header.rs  leaderboard.rs  menu.rs  mod.rs  modal.rs  mode_bar.rs  notifications.rs  results.rs  size_warning.rs  typing_area.rs
src/ui/helpers/: menu.rs  mod.rs  positioning.rs  styling.rs  utils.rs
src/utils/: filesystem.rs
tests/: generator_test.rs
